2010-09-21  Dave Tapuska  <dtapuska@rim.com>

        Reviewed by Csaba Osztrogonác.

        https://bugs.webkit.org/show_bug.cgi?id=45673

        r65596 caused ENABLE_PROFILER_REFERENCE_OFFSET to not be
        8 byte aligned. A non 8 byte divisible value for this will
        cause the sp to become non 8 byte aligned.

        Verify and correct offset values that r65596 effected that
        weren't updated.

        * jit/JITStubs.cpp:
        * jit/JITStubs.h:

2010-09-21  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Martin Robinson.

        Fix Opcode stats compilation
        https://bugs.webkit.org/show_bug.cgi?id=46079

        The FixedArray API had changed, and <stdio.h> was not included for
        printf.

        * bytecode/Opcode.cpp:
        (JSC::OpcodeStats::~OpcodeStats):

2010-09-20  Michael Saboff  <msaboff@apple.com>

        Reviewed by Gavin Barraclough.

        Fixed detection of alternative smaller than the first alternative
        to only check looping alternatives.
        https://bugs.webkit.org/show_bug.cgi?id=46049

        * yarr/RegexJIT.cpp:
        (JSC::Yarr::RegexGenerator::generateDisjunction):

2010-09-20  Peter Varga  <pvarga@inf.u-szeged.hu>

        Reviewed by Geoffrey Garen.

        REGRESSION(67790): jsc tests are failed with YARR interpreter
        https://bugs.webkit.org/show_bug.cgi?id=46083

        Fix the initializing of the lastSubpatternId member of
        parentheses.

        * yarr/RegexCompiler.cpp:
        (JSC::Yarr::RegexPatternConstructor::atomParenthesesEnd):

2010-09-20  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 46077 - ASSERT failure in YARR JIT

        We will currently attempt to loop if there are multiple alternatives, they are all
        BOL predicated, and the last alternative is longer then the first - however if all
        alternatives are BOL predicated the head of loop label will not have been set, and